Fixed issue with long email addresses overflowing out of a data-table cell

--- a/angular/style/components/data-table.styl
+++ b/angular/style/components/data-table.styl
@@ -9,6 +9,7 @@
 
 	td, th
 		border 1px solid color-data-table-border
+		word-break break-word
 
 	th
 		padding 1em
